<resources>
    <string name="app_name">Movie Library</string>
    <string name="menu_open">Open</string>
    <string name="menu_close">Close</string>
    <string name="headerMenu_title">Movie Library</string>
    <string name="movieDetails_movieTitle">Movie name</string>
    <string name="movieDetails_saveMovieButtonMessage">Save movie to device</string>
    <string name="movieDetails_movieSavedSuccess">Movie successfully saved</string>
    <string name="movieDetails_movieAlreadySaved">Movie already saved</string>
    <string name="nav_saved">Saved movies</string>
    <string name="nav_home">Home</string>
    <string name="movieDetails_removeMovieTitle">Remove saved movie</string>
    <string name="movieDetails_movieDeletedSuccess">Movie successfully deleted</string>
    <string name="movieDetails_moveDeleted">Movie already deleted</string>
    <string name="movieDetails_saveMovieTitle">Saving?</string>
    <string name="movieDetails_saveMovieMessage">Are you sure you want to save the movie</string>
    <string name="common_yes">yes</string>
    <string name="common_no">No</string>
    <string name="movieDetails_dialogDeleteTitle">Deleting?</string>
    <string name="movieDetails_dialogDeleteMessage">Are you sure you want to remove the movie?</string>
    <string name="movieDetails_pleaseWait">Please wait…</string>
    <string name="movieDetails_releaseDate">Released date</string>
    <string name="movieDetails_unknown">unknown</string>
    <string name="movieDetails_runtime">runtime</string>
    <string name="movieDetails_rating">rating</string>
    <string name="movieDetails_votes">IMDB votes</string>
    <string name="common_apiErrorResponse">Could not fetch data, please try again later.</string>
    <string name="homePage_noDataFound">No data available!</string>
    <string name="savedMovies_title">Saved Movies</string>
    <string name="savedMovies_noDataTitle">No movies? Quick go and search some!</string>
    <string name="requestManager_requestFailed">Could\'t fetch the data</string>
    <string name="detailsActivity_awards">Awards:</string>
    <string name="detailsActivity_genres">Genre(s):</string>
    <string name="detailsActivity_companies">Companies:</string>
    <string name="detailsActivity_languages">Language(s):</string>
    <string name="detailsActivity_keywords">Keyword(s):</string>
    <string name="nav_top250Movies">Top 250 movies</string>
    <string name="advancedFilterForm_title">Advanced Filter Form</string>
    <string name="advancedFilterForm_titleInput">Title</string>
    <string name="advancedFilterForm_genreInput">Genre(s)</string>
    <string name="advancedFilterForm_titleTypeInput">Title Type</string>
    <string name="advancedFilterForm_ratingFromInput">Rating From</string>
    <string name="advancedFilterForm_ratingToInput">Rating To</string>
    <string name="advancedFilterForm_keywordsInput">Keywords</string>
    <string name="advancedFilterForm_votesFromInput">Votes From</string>
    <string name="advancedFilterForm_votesToInput">Votes To</string>
    <string name="advancedFilterForm_plotInput">Plot</string>
    <string name="advancedFilterForm_runtimeFromInput">Runtime From</string>
    <string name="advancedFilterForm_runtimeToInput">Runtime to</string>
    <string name="advancedFilterForm_filmingLocationInput">Filming location</string>
    <string name="advancedFilterForm_cancelButton">Cancel</string>
    <string name="advancedFilterForm_searchButton">Search</string>
    <string name="advancedFilterForm_divider">Divider</string>
    <string name="homePage_searching">What are we searching?</string>
    <string name="homePage_plusIcon">plus_icon</string>
    <string name="common_apiException">An error occurred, please try again later</string>
    <string name="advancedFilterForm_dialogTitleType">Dialog Title Type</string>
    <string name="advancedFilterForm_genresDialogTitle">Genre(s)</string>
    <string name="common_validation_ratingMinValue">Value must not be grater that 10</string>
    <string name="common_validation_ratingMaxValue">Value must not be grater that 10</string>
    <string name="common_validation_ratingMinGreaterThanMax">Minimum rating must not be greater that maximum rating</string>
    <string name="common_validation_votesMinGreaterThanMax">Minimum votes must not be greater that maximum votes</string>
    <string name="common_validation_runtimeMinGreaterThanMax">Minimum runtime must not be greater that maximum runtime</string>
    <string name="detailsActivity_similarMovies">Similar Movies</string>
    <string name="detailsActivity_actors">Actors</string>
    <string name="detailsActivity_poster">Poster</string>
    <string name="boxOfficeAllTime_title">Box Office All Time</string>
    <string name="common_save">Save</string>
    <string name="settings_apiKeyTitle">Imdb api key</string>
    <string name="settings_title">Settings</string>
    <string name="boxOfficeAllTimeItem_title">Lifetime Gross</string>
    <string name="boxOfficeAllTimeItem_worldwide">Worldwide</string>
    <string name="boxOfficeAllTimeItem_domestic">Domestic</string>
    <string name="boxOfficeAllTimeItem_foreign">Foreign</string>
    <string name="settings_emptyValue">Please enter a value</string>
    <string name="settings_imdbKeyUpdateSuccess">Imdb key successfully updated</string>
    <string name="nav_mostPopular">Most popular</string>
    <string name="nav_top250Tvs">Top 250 TVs</string>
    <string name="nav_mostPopularMovies">Most popular movies</string>
    <string name="nav_mostPopularTvs">Most popular TVs</string>
    <string name="nav_inTheaters">In theaters</string>
    <string name="nav_comingSoon">Coming soon</string>
    <string name="nav_boxOffice">Box office</string>
    <string name="nav_boxOfficeAllTime">Box office all time</string>
    <string name="nav_other">Other</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about">About</string>
    <string name="common_poster">Poster</string>
    <string name="inTheaterItem_movieTitle">Movie name</string>
    <string name="boxOfficeItem_week">Weeks</string>
    <string name="boxOfficeItem_weekend">Weekend</string>
    <string name="boxOfficeItem_gross">Gross</string>
    <string name="activityTop250Movies_title">Top 250 Movies</string>
    <string name="activityMostPopularTvs_title">Most Popular TVs</string>
    <string name="activity_mostPopularMovies_title">Most Popular Movies</string>
    <string name="activityInTheaters_title">In Theaters</string>
    <string name="activityComingSoon_title">Coming Soon</string>
    <string name="common_questionMark">\?</string>
    <string name="detailsActivity_boxOfficeTitle">Box Office</string>
    <string name="detailsActivity_budget">Budget</string>
    <string name="detailsActivity_openingWeekendUsa">Opening Weekend USA</string>
    <string name="detailsActivity_usaGross">USA Gross</string>
    <string name="detailsActivity_cumulativeWorldwideGross">Cumulative Worldwide Gross</string>
    <string name="common_notAvailable">n/a</string>
    <string name="detailsActivity_tvSeriesCreators">Creators: %s</string>
    <string name="detailsActivity_tvSeriesSeasons">Seasons: %s</string>
    <string name="detailsActivity_tvSeriesTitle">Tv Series Info</string>
    <string name="activityTop250Tvs_title">Top 250 TVs</string>
    <string name="searchMenu_title">Search</string>
    <string name="savedMoviesActivity_filterMovies">Filter movies…</string>
    <string name="reviewsActivity_spoilerAlert">SPOILER ALERT!</string>
    <string name="mainActivity_searchMovies">Search Movies…</string>
    <string name="mainActivity_searchSeries">Search Series…</string>
    <string name="mainActivity_searchCompanies">Search Companies…</string>
    <string name="mainActivity_searchEpisodes">Search Episodes…</string>
    <string name="mainActivity_searchNames">Search Names…</string>
    <string name="mainActivity_searchAll">Search All…</string>
    <string name="mainActivity_searchKeywords">Search Keywords…</string>
    <string name="mainActivity_searchDefault">Search…</string>
    <string name="detailsActivity_reviewsText">Reviews</string>
    <string name="detailsActivity_faqText">FAQ</string>
    <string name="detailsActivity_imagesText">Images</string>
    <string name="detailsActivity_userRatingText">User Rating</string>
    <string name="activityUserRatings_demographicAll">Demographic All</string>
    <string name="Common_allAges">All ages:</string>
    <string name="common_under18">Under 18:</string>
    <string name="common_ages18to29">Ages 18 to 29:</string>
    <string name="common_ages30to44">Ages 30 to 44:</string>
    <string name="common_agesOver45">Ages over 45:</string>
    <string name="activityUserRatings_demographicMale">Demographic Male</string>
    <string name="activityUserRatings_demographicFemale">Demographic Female</string>
    <string name="activityUserRatings_top1000Voters">Top 1000 Voters</string>
    <string name="activityUserRatings_usVoters">US Voters</string>
    <string name="activityUserRatings_nonUsVoters">Non US Voters</string>
</resources>