<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="8dp"
    app:cardCornerRadius="8dp"
    android:id="@+id/cardView_container"
    android:layout_margin="8dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:weightSum="6"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView_comingSoonTitle"
                android:textColor="@color/textColor"
                android:padding="8dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textAlignment="viewStart"/>

            <TextView
                android:layout_marginEnd="10dp"
                android:layout_weight="5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/TextView_Rank"
                android:textColor="@color/textColor"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textAlignment="textEnd" />
        </LinearLayout>


        <LinearLayout
            android:layout_marginTop="15dp"
            android:padding="8dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView_poster"
                android:src="@drawable/ic_baseline_home_color_24"
                android:layout_width="80dp"
                android:layout_height="100dp"
                android:contentDescription="@string/common_poster" />

            <LinearLayout
                android:layout_gravity="center"

                android:gravity="center"
                android:layout_weight="4"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textColor="@color/textColor"
                    android:text="@string/boxOfficeItem_week"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:textColor="@color/textColor"
                    android:id="@+id/TextView_Weeks"
                    android:textAlignment="textStart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                android:layout_gravity="center"

                android:gravity="center"
                android:layout_weight="4"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textColor="@color/textColor"
                    android:layout_weight="2"
                    android:text="@string/boxOfficeItem_weekend"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:textColor="@color/textColor"
                    android:id="@+id/TextView_Weekend"
                    android:layout_weight="4"
                    android:textAlignment="textStart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_weight="4"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textColor="@color/textColor"
                    android:id="@+id/TextView_WorldwideLifetimeGrossTitle"
                    android:layout_weight="2"
                    android:text="@string/boxOfficeItem_gross"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:textColor="@color/textColor"
                    android:id="@+id/TextView_Gross"
                    android:layout_weight="4"
                    android:textAlignment="textStart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>